--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 
+.card-home {
+  @apply mt-20 h-64 w-full rounded-xl md:h-72 md:w-64 lg:h-80;
+}
  .air1{
     animation: wave 30s linear infinite;
     z-index: 1000;
